pkg/provider/kubernetes/ingress/fixtures/Ingress-with-port-invalid-for-one-service_ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ""
  namespace: testing

spec:
  rules:
    - host: traefik.port
      http:
        paths:
          - path: /port
            backend:
              service:
                name: service1
                port:
                  number: 8080
              pathType: Prefix
